[gd_scene load_steps=9 format=3 uid="uid://b5f1hp3jq07s3"]

[ext_resource type="Script" uid="uid://cgojljn2gxsig" path="res://Scenes/Enemys/spike_ball.gd" id="1_bkukf"]
[ext_resource type="Texture2D" uid="uid://c50fnf373qm8x" path="res://assets/Traps/Spiked Ball/Spiked Ball.png" id="2_bkukf"]
[ext_resource type="PackedScene" uid="uid://cet1h6y0r6k2q" path="res://Scenes/Enemys/One_chain.tscn" id="2_v8tq1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bkukf"]
radius = 12.5

[sub_resource type="CircleShape2D" id="CircleShape2D_v8tq1"]
radius = 12.5

[sub_resource type="Animation" id="Animation_bkukf"]
resource_name = "regular_move"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_v8tq1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1iosb"]
_data = {
&"RESET": SubResource("Animation_v8tq1"),
&"regular_move": SubResource("Animation_bkukf")
}

[node name="SpikeBall" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_bkukf")

[node name="OneChain" parent="." instance=ExtResource("2_v8tq1")]

[node name="SpikedBall" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 15)
texture = ExtResource("2_bkukf")

[node name="Area_collision_with_map" type="Area2D" parent="SpikedBall"]
position = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/Area_collision_with_map"]
position = Vector2(0.5, 16)
shape = SubResource("CircleShape2D_bkukf")

[node name="damage_zone" type="Area2D" parent="SpikedBall"]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/damage_zone"]
position = Vector2(0.5, 1)
shape = SubResource("CircleShape2D_v8tq1")

[node name="raycast_floor_detection" type="RayCast2D" parent="."]
target_position = Vector2(0, 30)

[node name="safeTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="animation_rotation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1iosb")
}

[connection signal="body_entered" from="SpikedBall/Area_collision_with_map" to="." method="_on_area_collision_with_map_body_entered"]
[connection signal="timeout" from="safeTime" to="." method="_on_safe_time_timeout"]
